--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,41 +19,44 @@
     <section id="hero">
       <h1>Chung An (Johnson) Chen</h1>
     </section>
-    <section id="about">
+    <section id="about" class="about-section">
       <h2>About Me</h2>
-      <p class="left-align indented">
-        With over 3 years of professional frontend web development experience, I
-        have honed my skills and expertise in crafting modern and user-friendly
-        web applications. My journey began with a passion for creating beautiful
-        and functional interfaces, which eventually led me to specialize in
-        frontend technologies.
-      </p>
-      <p class="left-align indented">
-        My proficiency spans a range of technologies, including HTML5, CSS3,
-        JavaScript, Typescript, React, Vue, and Node.js. These tools enable me
-        to bring ideas to life, ensuring that websites are not only visually
-        appealing but also perform optimally.
-      </p>
-      <p class="left-align indented">
-        Throughout my career, I've demonstrated expertise in React JS
-        components, forms, events, router setup, and animations. I've utilized
-        the Redux architecture to enhance website performance and provide
-        seamless user experiences. Whether collaborating within a team or
-        working independently, I've consistently delivered exceptional results.
-      </p>
-      <p class="left-align indented">
-        I'm well-versed in modern CSS layout and animation techniques, along
-        with preprocessors that streamline the development process. My
-        familiarity with automation tools like Webpack enables me to optimize
-        workflows for efficiency.
-      </p>
-      <p class="left-align indented">
-        I thrive in Agile/Sprint development processes, adapting to changing
-        requirements and delivering solutions within tight timelines. My
-        commitment to frontend excellence and a user-centric approach drives me
-        to continuously learn and explore new technologies in this dynamic
-        field.
-      </p>
+      <div class="about-content">
+        <p class="about-text">
+          With over 3 years of professional frontend web development experience,
+          I have honed my skills and expertise in crafting modern and
+          user-friendly web applications. My journey began with a passion for
+          creating beautiful and functional interfaces, which eventually led me
+          to specialize in frontend technologies.
+        </p>
+        <p class="about-text">
+          My proficiency spans a range of technologies, including HTML5, CSS3,
+          JavaScript, Typescript, React, Vue, and Node.js. These tools enable me
+          to bring ideas to life, ensuring that websites are not only visually
+          appealing but also perform optimally.
+        </p>
+        <p class="about-text">
+          Throughout my career, I've demonstrated expertise in React JS
+          components, forms, events, router setup, and animations. I've utilized
+          the Redux architecture to enhance website performance and provide
+          seamless user experiences. Whether collaborating within a team or
+          working independently, I've consistently delivered exceptional
+          results.
+        </p>
+        <p class="about-text">
+          I'm well-versed in modern CSS layout and animation techniques, along
+          with preprocessors that streamline the development process. My
+          familiarity with automation tools like Webpack enables me to optimize
+          workflows for efficiency.
+        </p>
+        <p class="about-text">
+          I thrive in Agile/Sprint development processes, adapting to changing
+          requirements and delivering solutions within tight timelines. My
+          commitment to frontend excellence and a user-centric approach drives
+          me to continuously learn and explore new technologies in this dynamic
+          field.
+        </p>
+      </div>
     </section>
     <section id="projects">
       <h2>Projects</h2>
